update view phieu

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -20,6 +20,7 @@
   "nhomts": "Asset Group",
   "policy": "policy",
   "taisan": "Product",
+  "phieunx": "Invoice",
   "phongbanda": "Project Department",
   "createauser": "create account",
   "taikhoangiamsat": "Delegating Supervision",
