--- a/src/locales/langs/vi.json
+++ b/src/locales/langs/vi.json
@@ -25,6 +25,7 @@
   "policy": "Chính sách chi tiết",
   "createauser": "Tạo tài khoản",
   "taisan": "Tài sản",
+  "phieunx": "Phiếu nhập xuất",
   "taikhoangiamsat": "Phân quyền giám sát",
   "cards": "thẻ",
   "blank": "trống",
