update taisan, taisanqrcode, phieunhapxuat

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -17,6 +17,8 @@
   "building": "building",
   "tang": "tang",
   "grouppolicy": "group policy",
+  "suachuats":"asset repair",
+  "taisanqrcode": "QR code asset",
   "nhomts": "Asset Group",
   "policy": "policy",
   "taisan": "Product",
