update change filter select

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -24,7 +24,7 @@
   "taisan": "Product",
   "phieunx": "Invoice",
   "phongbanda": "Project Department",
-  "createauser": "create account",
+  "createuser": "create account",
   "taikhoangiamsat": "Delegating Supervision",
   "tour": "tour",
   "calv": "shift",
