--- a/src/locales/langs/vi.json
+++ b/src/locales/langs/vi.json
@@ -25,7 +25,7 @@
   "taisanqrcode": "Tài sản QrCode",
   "grouppolicy": "Chính sách nhóm",
   "policy": "Chính sách chi tiết",
-  "createauser": "Tạo tài khoản",
+  "createuser": "Tạo tài khoản",
   "taisan": "Tài sản",
   "phieunx": "Phiếu nhập xuất",
   "taikhoangiamsat": "Phân quyền giám sát",
