--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -13,6 +13,8 @@
   "area": "area",
   "article": "article",
   "calamviec" :"Checklist inspection schedule",
+  "nhacc" :"Nhà Cung cấp",
+  "donvi-nhom": "Đơn vị - Nhóm",
   "giamsat": "Supervisor",
   "building": "building",
   "tang": "tang",
