--- a/src/locales/langs/vi.json
+++ b/src/locales/langs/vi.json
@@ -22,7 +22,9 @@
   "phongbanda": "Phòng ban dự án",
   "nhomts": "Nhóm tài sản",
   "suachuats":"Sửa chữa tài sản",
+  "nhacc" :"Nhà cung cấp",
   "taisanqrcode": "Tài sản QrCode",
+  "donvi-nhom": "Đơn vị - Nhóm",
   "grouppolicy": "Chính sách nhóm",
   "policy": "Chính sách chi tiết",
   "createuser": "Con người",
