--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -25,6 +25,7 @@
   "policy": "policy",
   "taisan": "Product",
   "phieunx": "Invoice",
+  "giaonhants": "property delivery",
   "phongbanda": "Project Department",
   "createuser": "create account",
   "taikhoangiamsat": "Delegating Supervision",
