--- a/src/locales/langs/vi.json
+++ b/src/locales/langs/vi.json
@@ -30,6 +30,7 @@
   "createuser": "Con người",
   "taisan": "Tài sản",
   "phieunx": "Phiếu nhập xuất",
+  "giaonhants": "Phiếu giao nhận TS",
   "phieuncc": "Phiếu nhập hàng NCC",
   "taikhoangiamsat": "Phân quyền giám sát",
   "cards": "thẻ",
