add view phieu xuat ncc

--- a/src/locales/langs/vi.json
+++ b/src/locales/langs/vi.json
@@ -14,15 +14,15 @@
   "area": "khu vực",
   "article": "hạng mục",
   "calv": "Ca làm việc",
-  "calamviec" :"Ca checklist",
+  "calamviec": "Ca checklist",
   "giamsat": "Người giám sát",
   "building": "Tòa nhà",
   "tang": "Tầng",
   "project": "Dự án",
   "phongbanda": "Phòng ban dự án",
   "nhomts": "Nhóm tài sản",
-  "suachuats":"Sửa chữa tài sản",
-  "nhacc" :"Nhà cung cấp",
+  "suachuats": "Sửa chữa tài sản",
+  "nhacc": "Nhà cung cấp",
   "taisanqrcode": "Tài sản QrCode",
   "donvi-nhom": "Đơn vị - Nhóm",
   "grouppolicy": "Chính sách nhóm",
@@ -32,6 +32,7 @@
   "phieunx": "Phiếu nhập xuất",
   "giaonhants": "Phiếu giao nhận TS",
   "phieuncc": "Phiếu nhập hàng NCC",
+  "phieuxuat": "Phiếu xuất hàng NCC",
   "taikhoangiamsat": "Phân quyền giám sát",
   "cards": "thẻ",
   "blank": "trống",
