fix create phieugiaonhants + create phieunxnoibo

--- a/src/locales/langs/vi.json
+++ b/src/locales/langs/vi.json
@@ -27,7 +27,7 @@
   "donvi-nhom": "Đơn vị - Nhóm",
   "grouppolicy": "Chính sách nhóm",
   "policy": "Chính sách chi tiết",
-  "createuser": "Con người",
+  "createuser": "Nhân sự",
   "taisan": "Tài sản",
   "phieunx": "Phiếu nhập xuất",
   "giaonhants": "Phiếu giao nhận TS",
